PROJECT(processes)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0 FATAL_ERROR)

ADD_SUBDIRECTORY(sensors)

ADD_SUBDIRECTORY(Joerg.Faschingbauer)
ADD_SUBDIRECTORY(Kamper.Manuel)
ADD_SUBDIRECTORY(Ascher.Thomas-Lamb.Manuel)
ADD_SUBDIRECTORY(Schlagholz.Georg-Platzer.Franz)
ADD_SUBDIRECTORY(Palade.Ionut-Huber.Joerg)
ADD_SUBDIRECTORY(Robert.Muehlberger)
ADD_SUBDIRECTORY(Kranabetter.Lukas)
ADD_SUBDIRECTORY(Dulzky.Florian)
ADD_SUBDIRECTORY(Mitteregger.Christoph-Wendl.Elena)
ADD_SUBDIRECTORY(Hagelmueller.Steven.Spoerk.Michael)
ADD_SUBDIRECTORY(Fritz.Eva-Schuberth.Juergen)
ADD_SUBDIRECTORY(Haberl.Hans-Georg)
ADD_SUBDIRECTORY(Patrick.Almer-Achim.Kotremba-Thomas.Windhaber)
ADD_SUBDIRECTORY(Bojan.Tot)
